Bug 690343 - Fonts with PaintType 2 (outline) not working with FreeType bridge
Summary: Fonts with PaintType 2 (outline) not working with FreeType bridge
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Font API (show other bugs)
Version: master
Hardware: PC Windows NT
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-19 09:02 UTC by Ken Sharp
Modified: 2009-03-19 09:11 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2009-03-19 09:02:52 UTC
Fonts with a PaintType of 2 are not rendered at all when using the FreeType
bridge code.

Genoa test file 017-01.ps exhibits the problem, amongst others.
Comment 1 Ken Sharp 2009-03-19 09:11:05 UTC
Fixed in revision 9573, patch here:

http://ghostscript.com/pipermail/gs-cvs/2009-March/009147.html