Fix (fonts): PaintType 2 fonts not working.

Details:
bug #690343 "Fonts with PaintType 2 (outline) not working with FreeType bridge"

The FAPI code seems to assume that it will always get an 'e_limitcheck' error when no
raster is available. This seems to be true for glyphs too large to cache, but is not
the case when the font is intended to be an outline. In this case there is no raster,
but the error return is not e_limitcheck.

Rather than rely on an error value, modified the code so that if the font has a
non-zero PainType, we assume that we only have an outline.

Expected Differences
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9573 a1074d23-0009-0410-80fe-cf8c14f379e6